<resources>
    <string name="app_name">YOUTOO</string>

    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading...</string>

    <string name="action_settings">Settings</string>
    <string name="newtoyoutoo">New to YouToo? Register here</string>
    <string name="login">Login to your Account</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="username">User Name</string>
    <string name="fullname">Full Name</string>
    <string name="registernewaccount">Register New Account</string>
        <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="enter_message">Enter your Message</string>
    <string name="broadcast">Broadcast</string>
    <string name="topicslist">Topics List</string>
    <string name="receivedmessages">Received Messages</string>
    <string name="letsconnect">Lets Connect</string>
    <string name="settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_title_Username">Change Username</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Change your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsummary">Turn on/off your notifications</string>
    <string name="notification">Notification</string>
    <string name="prefSelectradius">Notification</string>
    <string name="pref_searchradius_summary">Select the search radius</string>
    <string name="Searchradius">Radius</string>
    <string name="seeConnection">See Connections</string>

    <string name="logout">Logout</string>




</resources>
