<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="wrap_content">

    <PreferenceCategory android:title="Settings" >
        <EditTextPreference
            android:title="@string/pref_title_Username"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>
        <SwitchPreference
            android:key="@string/notification"
            android:title="@string/notifications"
            android:summary="@string/notificationsummary"/>
      <!--  <ListPreference

            android:key="@string/prefSelectradius"
            android:summary="@string/pref_searchradius_summary"
            android:title="@string/Searchradius"
            android:entries="@array/searchRadius"
            android:entryValues="@array/searchRadiusValues"></ListPreference>-->



    </PreferenceCategory>

    <PreferenceCategory android:title="Security Settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefLockScreen"
            android:summary="Lock The Screen With Password"
            android:title="Screen Lock" >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefUpdateFrequency"
            android:title="Reminder for Updation"
            android:summary="Set Update Reminder Frequency"
            android:entries="@array/updateFrequency"
            android:entryValues="@array/updateFrequencyValues"
            />
    </PreferenceCategory>





</PreferenceScreen>
